2009-05-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Fix wrong sensitiveness of the Redo buttons (closes #2797862).


2009-05-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS, src/about.c, po/lb.po, po/LINGUAS:
   Added Luxembourgian translation. Huge thanks to Laurent Hoeltgen.


2009-05-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c:
   Remove quote_executable() as it is not used anymore.
   When creating the geany_run_script.bat use the "%0" variable
   expansion and quote it for the "del" command (closes #2797172).
 * src/win32.c:
   On Windows, fallback to the literal build command line if searching
   for the command in the system path failed (related to #2795923).
   Properly terminate the resulting strings when reading the stdout
   and stderr of any spawned commands on Windows.


2009-05-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/win32.c:
   Use the wide character versions of native Windows File dialogs.
 * src/project.c:
   Fix wrong initialisation of the default project path button callback
   in the preferences dialog.
 * Makefile.am, configure.in, geany.nsi, geany.spec.in, wscript,
   geany_private.rc, icons/16x16/Makefile.am, icons/16x16/geany.png,
   icons/48x48, icons/48x48/Makefile.am, icons/48x48/geany.png,
   icons/Makefile.am, icons/geany.ico, icons/scalable,
   icons/scalable/Makefile.am, icons/scalable/geany.svg,
   src/makefile.win32:
   Move the icons geany.png and geany.ico into the icons directory.
   Add a 16x16 pixel Geany icon and the scalable SVG icon.
   Drop the pixmaps directory.


2009-05-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Improve MRU document switching so there are no duplicates in the
   list and documents switched to whilst the dialog is open are
   ignored. Also beep when cycling through to the first document in the
   list.

